# crabsburger

./: .gitignore  404.html  Cargo.toml  Dioxus.toml  README.md  index.html  input.css  package.json  tailwind.config.js
assets/: tailwind.css
docs/: index.html  tailwind.css
docs/assets/dioxus/: Crabsburger.js  Crabsburger_bg.wasm  Fustfood.js  Fustfood_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-dce332548ff09d6f/: inline0.js
lang/ar/: food.ftl  main.ftl  review.ftl
lang/de/: food.ftl  main.ftl  review.ftl
lang/en-US/: food.ftl  main.ftl  review.ftl
lang/es/: food.ftl  main.ftl  review.ftl
public/: tailwind.css
src/: app.rs  constants.rs  icons.rs  main.rs  route.rs
src/components/: err_page.rs  icon.rs  lang_dd.rs  mod.rs  nav_bar.rs
src/components/home_page/: category_card.rs  category_card_ui.rs  check_card.rs  food_card.rs  food_card_ui.rs  home.rs  home_card_icon.rs  home_card_icon_ui.rs  mod.rs  promo_card.rs  promo_card_ui.rs  reviewers_card.rs  reviewers_card_ui.rs
src/model/: app_state.rs  card.rs  category_card.rs  food_card.rs  home_card_icon.rs  img.rs  mod.rs  promo_card.rs  review_card.rs  svg.rs
src/repository/: category_card_repo.rs  category_repo.rs  food_card_repo.rs  food_repo.rs  home_card_icon_repo.rs  home_icon_repo.rs  mod.rs  promo_card_repo.rs  promo_repo.rs  review_card_repo.rs  review_repo.rs
src/ui/main/: category_card_ui.rs  home_card_icon_ui.rs  mod.rs
src/utils/: close.rs  evals.rs  mod.rs
webapp/: fustfood.wasm  index.html  tailwind.css  tailwind.css.br
webapp/assets/dioxus/: Crabsburger.js  Crabsburger.js.br  Crabsburger_bg.wasm  Crabsburger_bg.wasm.br  Fustfood.js  Fustfood_bg.wasm
webapp/assets/dioxus/snippets/dioxus-interpreter-js-2a9fdcda6a4621ea/: inline0.js  inline0.js.br
webapp/assets/dioxus/snippets/dioxus-interpreter-js-dce332548ff09d6f/: inline0.js
webapp/fonts/: Poppins-Black.ttf.br  Poppins-ExtraLight.ttf.br  Poppins-MediumItalic.ttf.br
webapp/images/: about.jpg.br  burger-1.png.br  review-5.jpg.br  snack-2.png.br  snack-3.png.br
