[package]
name = "fustfood"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4.31"
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web", "router"] }
# dioxus = { version = "0.5.0-alpha.0", features = ["web", "router"] }
manganis = "0.2.1"
wasm-bindgen = "0.2.89"

[dependencies.web-sys]
version = "0.3"
features = []
