[package]
name = "fustfood"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4.38"
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web", "router"] }
dioxus-logger = "0.5.1"
fluent-templates = "0.10.1"
serde_json = "1.0.128"
unic-langid = "0.9.5"
once_cell = "1.19.0"
