[package]
name = "fustfood"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4.39"
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "bdeedc1", features = ["router"] }
dioxus-logger = "0.6.2"
fluent-templates = "0.13.0"
serde_json = "1.0.138"
unic-langid = "0.9.5"
once_cell = "1.20.3"
dioxus-sdk = "0.6.0"
# dioxus-sdk = { git = "https://github.com/DioxusLabs/sdk", branch = "feat/dioxus-0.6", features = ["storage"] }

# [patch.crates-io]
# dioxus = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-lib = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-core = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-core-macro = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-config-macro = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-router = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-router-macro = { git = "https://github.com/dioxuslabs/dioxus" }
# dioxus-html = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-html-internal-macro = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-hooks = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-web = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-ssr = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-interpreter-js = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-liveview = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-rsx = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-signals = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-cli-config = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# generational-box = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus_server_macro = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-fullstack = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-autofmt = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-devtools = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# dioxus-devtools-types = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# manganis = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# manganis-core = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }
# manganis-macro = { git = "https://github.com/dioxuslabs/dioxus", rev = "992c2b0" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
